--- a/Enhanced Web Pages/index.html
+++ b/Enhanced Web Pages/index.html
@@ -9,6 +9,11 @@
 	  <title>Adhvay</title>
       <!--Let browser know website is optimized for mobile-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+      <style>
+      	body{
+      		font-family:'Segoe UI';
+      	}
+      </style>
     </head>
 
     <body>
@@ -25,7 +30,7 @@
 		  <div class="row">
 			  
 		
-	  <div class="col s12 m8 offset-m2 l6 offset-l3" style="padding-top: 10%;">
+	  <div class="col s12 m8 offset-m2 l4 offset-l4" style="padding-top: 6%;">
         <div class="card-panel grey lighten-5 z-depth-1">
 			<h4 class="header2" style="vertical-align:center;">Doctor Login</h4>
 			<form>
