--- a/Enhanced Web Pages/index.html
+++ b/Enhanced Web Pages/index.html
@@ -21,16 +21,14 @@
 			<div class="nav-wrapper">
 			  <a href="index.html" class="brand-logo">&nbsp;&nbsp;Adhvay</a>
 			  <ul id="nav-mobile" class="right hide-on-med-and-down">
-				<li><a href="sass.html">Patient</a></li>
+				<li><a href="patient_login.html">Patient</a></li>
 				<li><a href="badges.html">Diagnostic Centre</a></li>
 				<li><a href="collapsible.html">Pharmacist</a></li>
 			  </ul>
 			</div>
 		  </nav>
-		  <div class="row">
-			  
-		
-	  <div class="col s12 m8 offset-m2 l4 offset-l4" style="padding-top: 6%;">
+	<div class="row">
+		<div class="col s12 m8 offset-m2 l4 offset-l4" style="padding-top: 6%;">
         <div class="card-panel grey lighten-5 z-depth-1">
 			<h4 class="header2" style="vertical-align:center;">Doctor Login</h4>
 			<form>
@@ -56,7 +54,7 @@
 			  
 			</form>
         </div>
-      </div>
+    </div>
 	  
       <!--Import jQuery & materialize.js-->
       <script type="text/javascript" src="js/jquery-2.1.1.min.js"></script>
