--- a/Enhanced Web Pages/patient_login.html
+++ b/Enhanced Web Pages/patient_login.html
@@ -30,7 +30,7 @@
 	<div class="row">
 		<div class="col s12 m8 offset-m2 l4 offset-l4" style="padding-top: 6%;">
         <div class="card-panel grey lighten-5 z-depth-1">
-			<h4 class="header2" style="vertical-align:center;">Doctor Login</h4>
+			<h4 class="header2" style="vertical-align:center;">Patient Login</h4>
 			<form>
 			  <div class="row">
 				<div class="input-field col s12">
