--- a/Enhanced Web Pages/index.html
+++ b/Enhanced Web Pages/index.html
@@ -35,7 +35,7 @@
 			  <div class="row">
 				<div class="input-field col s12">
 				  <i class="material-icons prefix">account_circle</i>
-				  <input id="icon_prefix" type="text" class="validate">
+				  <input id="icon_prefix" type="text" class="validate" autofocus>
 				  <label for="icon_prefix">Doctor ID</label>
 				</div>
 			  </div>
