--- a/Enhanced Web Pages/patient_login.html
+++ b/Enhanced Web Pages/patient_login.html
@@ -35,7 +35,7 @@
 			  <div class="row">
 				<div class="input-field col s12">
 				  <i class="material-icons prefix">perm_contact_calander</i>
-				  <input id="icon_telephone" type="tel" class="validate">
+				  <input id="icon_telephone" type="tel" class="validate" autofocus>
 				  <label for="icon_telephone">Patient ID</label>
 				</div>
 				<div class="input-field col s12">
