--- a/Enhanced Web Pages/index.html
+++ b/Enhanced Web Pages/index.html
@@ -22,8 +22,8 @@
 			  <a href="index.html" class="brand-logo">&nbsp;&nbsp;Adhvay</a>
 			  <ul id="nav-mobile" class="right hide-on-med-and-down">
 				<li><a href="patient_login.html">Patient</a></li>
-				<li><a href="badges.html">Diagnostic Centre</a></li>
-				<li><a href="collapsible.html">Pharmacist</a></li>
+				<li><a href="report_login.html">Diagnostic Centre</a></li>
+				<li><a href="pharmacy_login.html">Pharmacist</a></li>
 			  </ul>
 			</div>
 		  </nav>
@@ -34,7 +34,7 @@
 			<form>
 			  <div class="row">
 				<div class="input-field col s12">
-				  <i class="material-icons prefix">account_circle</i>
+				  <i class="material-icons prefix">assignment_ind</i>
 				  <input id="icon_prefix" type="text" class="validate" autofocus>
 				  <label for="icon_prefix">Doctor ID</label>
 				</div>
