--- a/Enhanced Web Pages/report_login.html
+++ b/Enhanced Web Pages/report_login.html
@@ -34,14 +34,14 @@
 			<form>
 			  <div class="row">
 				<div class="input-field col s12">
-				  <i class="material-icons prefix">picture_in_picture</i>
+				  <i class="material-icons prefix">email</i>
 				  <input id="icon_prefix" type="text" class="validate" autofocus>
 				  <label for="icon_prefix">Centre ID</label>
 				</div>
 			  </div>
 			  <div class="row">
 				<div class="input-field col s12">
-				  <i class="material-icons prefix">lock_outline</i>
+				  <i class="material-icons prefix">lock</i>
 				  <input id="icon_telephone" type="password" class="validate">
 				  <label for="icon_telephone">Password</label>
 				</div>
