--- a/Enhanced Web Pages/pharmacy_login.html
+++ b/Enhanced Web Pages/pharmacy_login.html
@@ -53,6 +53,7 @@
 			  </div>
 			  
 			</form>
+			<p><center>New to us? <a href="report-reg.html">Sign Up</a></center></p>
         </div>
     </div>
 	  
