Patient OTP page

--- a/Enhanced Web Pages/patient_login.html
+++ b/Enhanced Web Pages/patient_login.html
@@ -22,8 +22,8 @@
 		  <a href="index.html" class="brand-logo">&nbsp;&nbsp;Adhvay</a>
 		  <ul id="nav-mobile" class="right hide-on-med-and-down">
 			<li><a href="patient_login.html">Patient</a></li>
-			<li><a href="badges.html">Diagnostic Centre</a></li>
-			<li><a href="collapsible.html">Pharmacist</a></li>
+			<li><a href="report_login.html">Diagnostic Centre</a></li>
+			<li><a href="Pharmacy_login.html">Pharmacist</a></li>
 		  </ul>
 		</div>
 	</nav>
