--- a/Enhanced Web Pages/index.html
+++ b/Enhanced Web Pages/index.html
@@ -3,7 +3,7 @@
   <html>
     <head>
       <!--Import Google Icon Font-->
-      <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+      <link href="fonts/icons.css" rel="stylesheet">
       <!--Import materialize.css-->
       <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
 	  <title>Adhvay</title>
