--- a/Enhanced Web Pages/patient_login.html
+++ b/Enhanced Web Pages/patient_login.html
@@ -31,11 +31,11 @@
 		<div class="col s12 m8 offset-m2 l4 offset-l4" style="padding-top: 6%;">
         <div class="card-panel grey lighten-5 z-depth-1">
 			<h4 class="header2" style="vertical-align:center;">Patient Login</h4>
-			<form>
+			<form action="/verifyP" method="get">
 			  <div class="row">
 				<div class="input-field col s12">
 				  <i class="material-icons prefix">perm_contact_calander</i>
-				  <input id="icon_telephone" type="tel" class="validate" autofocus>
+				  <input id="icon_telephone" type="tel" class="validate" name="patientproofid" autofocus>
 				  <label for="icon_telephone">Patient ID</label>
 				</div>
 				<div class="input-field col s12">
