--- a/Enhanced Web Pages/pharmacy-reg.html
+++ b/Enhanced Web Pages/pharmacy-reg.html
@@ -31,33 +31,33 @@
 		<div class="col s12 m8 offset-m2 l4 offset-l4" style="padding-top: 6%;">
         <div class="card-panel grey lighten-5 z-depth-1">
 			<h4 class="header2" style="vertical-align:center;">Registration</h4>
-			<form>
+			<form action="/regpharm" method="post">
 				<div class="input-field col s12">
 				  <i class="material-icons prefix">shopping_cart</i>
-				  <input id="icon_prefix" type="text" class="validate" autofocus>
+				  <input id="icon_prefix" type="text" class="validate" name="Name"  required maxlength="30" autofocus>
 				  <label for="icon_prefix">Store Name</label>
 			  </div>
 			  
 				<div class="input-field col s12">
 				  <i class="material-icons prefix">call</i>
-				  <input id="icon_telephone" type="tel" class="validate">
+				  <input id="icon_telephone" type="tel" class="validate" name="Mobile" pattern="[789][0-9]{9}" pattern=".{10,10}" maxlength="10">
 				  <label for="icon_telephone">Contact Number</label>
 				</div>
 				<div class="row">
 				<div class="input-field col s12">
 				  <i class="material-icons prefix">email</i>
-				  <input id="icon_prefix" type="email" class="validate">
+				  <input id="icon_prefix" type="email" class="validate" name="Email" required>
 				  <label for="icon_prefix">Email ID</label>
 			  </div>
 				<div class="input-field col s12">
 				  <i class="material-icons prefix">lock_outline</i>
-				  <input id="icon_telephone" type="password" class="validate">
-				  <label for="icon_telephone">Password</label>
+				  <input id="password" type="password" class="validate" name="Password" required>
+				  <label for="password">Password</label>
 				</div>
 				<div class="input-field col s12">
 				  <i class="material-icons prefix">lock_outline</i>
-				  <input id="icon_telephone" type="password" class="validate">
-				  <label for="icon_telephone">Confirm Password</label>
+				  <input type="password" class="validate" id="passwordConfirm">
+				  <label for="passwordConfirm" data-error="Password not match" data-success="Password Match">Confirm Password</label>
 				</div>
 				<div class="input-field col s12">
 					<button class="btn waves-effect waves-light right submit" type="submit" name="action">Register
@@ -69,7 +69,7 @@
 			</form>
         </div>
     </div>
-	  
+    
       <!--Import jQuery & materialize.js-->
       <script type="text/javascript" src="js/jquery-2.1.1.min.js"></script>
       <script type="text/javascript" src="js/materialize.min.js"></script>
