--- a/Enhanced Web Pages/pharmacy_login.html
+++ b/Enhanced Web Pages/pharmacy_login.html
@@ -31,18 +31,18 @@
 		<div class="col s12 m8 offset-m2 l4 offset-l4" style="padding-top: 6%;">
         <div class="card-panel grey lighten-5 z-depth-1">
 			<h4 class="header2" style="vertical-align:center;">Pharmacist Login</h4>
-			<form>
+			<form action="/loginPaction" method="post">
 			  <div class="row">
 				<div class="input-field col s12">
 				  <i class="material-icons prefix">email</i>
-				  <input id="icon_prefix" type="text" class="validate" autofocus>
+				  <input id="icon_prefix" type="text" class="validate" name="Pharmacy-id" autofocus>
 				  <label for="icon_prefix">Pharmacy ID</label>
 				</div>
 			  </div>
 			  <div class="row">
 				<div class="input-field col s12">
 				  <i class="material-icons prefix">lock</i>
-				  <input id="icon_telephone" type="password" class="validate">
+				  <input id="icon_telephone" type="password" name="Password" class="validate">
 				  <label for="icon_telephone">Password</label>
 				</div>
 				<div class="input-field col s12">
