--- a/Enhanced Web Pages/patient_otp.html
+++ b/Enhanced Web Pages/patient_otp.html
@@ -35,8 +35,8 @@
 			  <div class="row">
 				<div class="input-field col s12">
 				  <i class="material-icons prefix">phonelink_ring</i>
-				  <input id="icon_telephone" type="tel" class="validate" autofocus>
-				  <label for="icon_telephone">OTP</label>
+				  <input id="id" type="tel" class="validate" required autofocus>
+				  <label for="id">OTP</label>
 				</div>
 				<div class="input-field col s12">
 					<button class="btn waves-effect waves-light right submit" type="submit" name="action">Submit
