--- a/Enhanced Web Pages/index.html
+++ b/Enhanced Web Pages/index.html
@@ -35,15 +35,15 @@
 			  <div class="row">
 				<div class="input-field col s12">
 				  <i class="material-icons prefix">assignment_ind</i>
-				  <input id="icon_prefix" type="text" name="doctorid" class="validate" autofocus>
-				  <label for="icon_prefix">Doctor ID</label>
+				  <input id="doctorid" type="text" name="doctorid" class="validate" required autofocus>
+				  <label for="doctorid">Doctor ID</label>
 				</div>
 			  </div>
 			  <div class="row">
 				<div class="input-field col s12">
 				  <i class="material-icons prefix">perm_contact_calander</i>
-				  <input id="icon_telephone" type="tel" name="patientproofid" class="validate">
-				  <label for="icon_telephone">Patient ID</label>
+				  <input id="id" type="tel" name="patientproofid" class="validate" required>
+				  <label for="id">Patient ID</label>
 				</div>
 				<div class="input-field col s12">
 					<button class="btn waves-effect waves-light right submit" type="submit" name="btnSubmit">Submit
