--- a/Enhanced Web Pages/patient_login.html
+++ b/Enhanced Web Pages/patient_login.html
@@ -35,8 +35,8 @@
 			  <div class="row">
 				<div class="input-field col s12">
 				  <i class="material-icons prefix">perm_contact_calander</i>
-				  <input id="icon_telephone" type="tel" class="validate" name="patientproofid" autofocus>
-				  <label for="icon_telephone">Patient ID</label>
+				  <input id="ID" type="tel" class="validate" name="patientproofid" required autofocus>
+				  <label for="ID">Patient ID</label>
 				</div>
 				<div class="input-field col s12">
 					<button class="btn waves-effect waves-light right submit" type="submit" name="action">Generate OTP
