--- a/Enhanced Web Pages/index.html
+++ b/Enhanced Web Pages/index.html
@@ -42,7 +42,7 @@
 			  <div class="row">
 				<div class="input-field col s12">
 				  <i class="material-icons prefix">perm_contact_calander</i>
-				  <input id="id" type="tel" name="patientproofid" class="validate" required>
+				  <input id="id" type="tel" name="patientproofid" maxlength="10" class="validate" required>
 				  <label for="id">Patient ID</label>
 				</div>
 				<div class="input-field col s12">
