--- a/Enhanced Web Pages/patient_login.html
+++ b/Enhanced Web Pages/patient_login.html
@@ -35,7 +35,7 @@
 			  <div class="row">
 				<div class="input-field col s12">
 				  <i class="material-icons prefix">perm_contact_calander</i>
-				  <input id="ID" type="tel" class="validate" name="patientproofid" required autofocus>
+				  <input id="ID" type="tel" class="validate" maxlength="10" name="patientproofid" required autofocus>
 				  <label for="ID">Patient ID</label>
 				</div>
 				<div class="input-field col s12">
