--- a/Enhanced Web Pages/patient_otp.html
+++ b/Enhanced Web Pages/patient_otp.html
@@ -35,7 +35,7 @@
 			  <div class="row">
 				<div class="input-field col s12">
 				  <i class="material-icons prefix">phonelink_ring</i>
-				  <input id="id" type="tel" class="validate" required autofocus>
+				  <input id="id" type="tel" maxlength="4" class="validate" required autofocus>
 				  <label for="id">OTP</label>
 				</div>
 				<div class="input-field col s12">
