--- a/Enhanced Web Pages/report_login.html
+++ b/Enhanced Web Pages/report_login.html
@@ -35,15 +35,15 @@
 			  <div class="row">
 				<div class="input-field col s12">
 				  <i class="material-icons prefix">email</i>
-				  <input id="icon_prefix" type="text" class="validate" autofocus>
-				  <label for="icon_prefix">Centre ID</label>
+				  <input id="id" type="text" class="validate" autofocus required>
+				  <label for="id">Centre ID</label>
 				</div>
 			  </div>
 			  <div class="row">
 				<div class="input-field col s12">
 				  <i class="material-icons prefix">lock</i>
-				  <input id="icon_telephone" type="password" class="validate">
-				  <label for="icon_telephone">Password</label>
+				  <input id="password" type="password" class="validate" required>
+				  <label for="password">Password</label>
 				</div>
 				<div class="input-field col s12">
 					<button class="btn waves-effect waves-light right submit" type="submit" name="action">Login
