TODO in index.html

--- a/Enhanced Web Pages/index.html
+++ b/Enhanced Web Pages/index.html
@@ -125,6 +125,9 @@
 
 			return (c === 0);
 		}
+		
+		//TODO: validate the Aadhar number on key up
+			
 	  </script>
       <!--Import jQuery & materialize.js-->
       <script type="text/javascript" src="js/jquery-2.1.1.min.js"></script>
