--- a/Enhanced Web Pages/index.html
+++ b/Enhanced Web Pages/index.html
@@ -46,7 +46,7 @@
 				  <label for="id">Patient ID</label>
 				</div>
 				<div class="input-field col s12">
-					<button id="Submit" class="btn waves-effect waves-light right submit"  name="btnSubmit">Submit
+					<button id="Submit" class="btn waves-effect waves-light right submit" type="submit" name="btnSubmit">Submit
 					  <i class="mdi-content-send right"></i>
 					</button>
 				</div>
@@ -127,11 +127,10 @@
 		}
 		
 		$("#Submit").on("click", function (){
-			//TODO: validate the Aadhar number on key up
-			
-				//if(!validate($("#id").val()))
-					//alert("Check Aadhar Number");
-			});
+				//TODO: validate the Aadhar number on key up
+				/*if(!validate($("#id").val()))
+					alert("Check Aadhar Number");*/
+			}
 		
 			
 	  </script>
